Fix some more deprecation warnings when building with Java 9. Use of Class.newInstance() in o.a.tomcat
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1811203 13f79535-47bb-0310-9956-ffa450edef68